# docs/swagger.yaml
@@ -38,6 +38,8 @@ definitions:
         type: string
       huella:
         type: string
+      id:
+        type: integer
       idEmpleado:
         type: string
       idRol:
@@ -119,6 +121,8 @@ definitions:
     type: object
   model.Rol:
     properties:
+      id:
+        type: integer
       idRol:
         type: integer
       nombre:
@@ -129,6 +133,81 @@ definitions:
 info:
   contact: {}
 paths:
+  /empleado:
+    get:
+      consumes:
+      - application/json
+      description: Ruta usada para traer datos relevante al momento de realizar una
+        edición
+      parameters:
+      - description: Id del empleado
+        in: query
+        name: idEmpleado
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Empleado'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: Obtener empleado po su Id
+      tags:
+      - Empleado
+  /empleados:
+    get:
+      consumes:
+      - application/json
+      description: Listado de empleados o usuario con los datos principales
+      parameters:
+      - description: Opciones de filtro 0-libre 1-para iniciar la busqueda
+        in: query
+        name: opcion
+        required: true
+        type: integer
+      - description: Datos para el filtro
+        in: query
+        name: search
+        type: string
+      - description: Inicio de la paginación
+        in: query
+        name: posicionPagina
+        required: true
+        type: integer
+      - description: Filas por paginación
+        in: query
+        name: filasPorPagina
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Empleado'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: Lista de empleados o usarios del sistema
+      tags:
+      - Empleado
   /empresa:
     get:
       consumes:
@@ -152,6 +231,68 @@ paths:
       summary: Para obtener la empresa actual
       tags:
       - Empresa
+  /lista-detalle-idmantenimiento:
+    get:
+      consumes:
+      - application/json
+      description: Obtener el listado de detalle por id mantenimiento
+      parameters:
+      - description: Opciones de filtro 0-libre 1-para excluir el nombre al inciar
+          la busqueda
+        in: query
+        name: opcion
+        required: true
+        type: string
+      - description: Id del matenimiento
+        in: query
+        name: idMantenimiento
+        required: true
+        type: string
+      - description: nombre a excluir
+        in: query
+        name: nombre
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Detalle'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: Obtener detalle
+      tags:
+      - Detalle
+  /listar-roles:
+    get:
+      consumes:
+      - application/json
+      description: Obtener el listado de roles para los modulos que necesiten
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Rol'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: Lista de roles
+      tags:
+      - Rol
   /login:
     get:
       consumes:
